First draft for jetty 12 and JDK 21